sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: value -+ is not a member of Int
      if (plusPetit(c-+1,c)){
                     ^